--- a/4_Loops and Control Flow.ipynb
+++ b/4_Loops and Control Flow.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,9 +55,9 @@
      "output_type": "stream",
      "text": [
       "List Iteration\n",
-      "python\n",
-      "c++\n",
-      "java\n",
+      "hello\n",
+      "hello\n",
+      "found java\n",
       "\n",
       "Tuple Iteration\n",
       "python\n",
@@ -83,8 +83,13 @@
     "# Iterating over a list \n",
     "print(\"List Iteration\") \n",
     "l = [\"python\", \"c++\", \"java\"] \n",
-    "for i in l: \n",
-    "    print(i) \n",
+    "for i in l:\n",
+    "    if i=='c':\n",
+    "        print('found c')\n",
+    "    elif i=='java':\n",
+    "        print('found java')\n",
+    "    else:\n",
+    "        print('hello')\n",
     "# Iterating over a tuple (immutable) \n",
     "print(\"\\nTuple Iteration\") \n",
     "t = (\"python\", \"c++\", \"java\") \n",
@@ -184,15 +189,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pass Statement"
+    "## Pass Statement\n",
+    "\n",
+    "use pass statement to write empty loops. Pass is also used for empty control statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found z or g\n",
+      "found z or g\n"
+     ]
+    }
+   ],
+   "source": [
+    "# An empty loop \n",
+    "for letter in 'python programming': \n",
+    "    if letter=='z' or letter=='g':\n",
+    "        print('found z or g')\n",
+    "    else:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### mylist=[1,2,3,4,5]\n",
+    "#### quiz :How to print mylist in reverse order (from last to first item) using while and for in loops"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### enumerate keyword\n",
+    "\n",
+    "numerate() is used to loop through the containers printing the index number along with the value present in that particular index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 The\n",
+      "1 Big\n",
+      "2 Bang\n",
+      "3 Theory\n"
+     ]
+    }
+   ],
+   "source": [
+    "# python code to demonstrate working of enumerate() \n",
+    "\n",
+    "for key, value in enumerate(['The', 'Big', 'Bang', 'Theory']):\n",
+    "    print(key, value) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### zip keyword\n",
+    "\n",
+    "zip() is used to combine 2 similar containers(list-list or dict-dict) printing the values sequentially. The loop exists only till the smaller container ends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your name? I am apple.\n",
+      "What is your colour? I am red.\n",
+      "What is your shape? I am a circle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# python code to demonstrate working of zip() \n",
+    "# initializing list \n",
+    "questions = ['name', 'colour', 'shape'] \n",
+    "answers = ['apple', 'red', 'a circle'] \n",
+    "\n",
+    "# using zip() to combine two containers \n",
+    "# and print values \n",
+    "for question, answer in zip(questions, answers):\n",
+    "    print('What is your {0}? I am {1}.'.format(question, answer))"
+   ]
   }
  ],
  "metadata": {
