added delete node by index in single linked list

--- a/Data Structures and Algorithms/Single_Linked_List.ipynb
+++ b/Data Structures and Algorithms/Single_Linked_List.ipynb
@@ -42,12 +42,18 @@
     "    * insert node at specefic position\n",
     "    * Time complexity of insert () is O(1)\n",
     "    \n",
-    "![linkedlist](../images/Linkedlist_insert_middle.png)"
+    "![linkedlist](../images/Linkedlist_insert_middle.png)\n",
+    "\n",
+    "* delete\n",
+    "\n",
+    "    * delete a node at given position\n",
+    "    * Time complexity is O(1)\n",
+    "![linkedlist](../images/Linkedlist_deletion.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,12 +145,31 @@
     "                print(temp.data, end=' >>> ')\n",
     "                temp = temp.next_node\n",
     "        else:\n",
-    "            return []"
+    "            return []\n",
+    "\n",
+    "    def delete_node(self, position):\n",
+    "        if self.head:\n",
+    "            current_node = self.head\n",
+    "            if position == 1:\n",
+    "                self.head = self.head.next_node\n",
+    "            elif position > 1:\n",
+    "                index = 1\n",
+    "                while current_node.next_node:\n",
+    "                    if index == position - 1:\n",
+    "                        # delete logic\n",
+    "                        next_node = current_node.next_node\n",
+    "                        current_node.next_node = next_node.next_node\n",
+    "                        return\n",
+    "                    index += 1\n",
+    "                    current_node = current_node.next_node\n",
+    "                raise IndexError\n",
+    "        else:\n",
+    "            raise IndexError"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -169,6 +194,50 @@
     "llist.insert(Node('E'), 5)\n",
     "print(llist.get_position(5))\n",
     "llist.print_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 >>> 7 >>> D >>> E >>> 6 >>> A >>> B >>> "
+     ]
+    }
+   ],
+   "source": [
+    "llist.delete_node(3)\n",
+    "llist.print_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 >>> 7 >>> D >>> E >>> 6 >>> A >>> "
+     ]
+    }
+   ],
+   "source": [
+    "llist.delete_node(7)\n",
+    "llist.print_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### take home assignment\n",
+    "#### implement delete_node_by_value () function , which deletes a node with specefic value , if value is not found raise KeyError exception"
    ]
   }
  ],
