:sparkles: added python and ds intro

--- a/2_python_programming_language/5_python_data structures.ipynb
+++ b/2_python_programming_language/5_python_data structures.ipynb
@@ -432,6 +432,267 @@
     "print(\"Printing all elements using slice operation: \") \n",
     "print(Sliced_List)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python Tuples\n",
+    "`Tuple is a collection of Python objects much like a list. The sequence of values stored in a tuple can be of any type, and they are indexed by integers`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial empty Tuple: \n",
+      "()\n",
+      "Tuple with the use of String: \n",
+      "('data', 'science')\n",
+      "Tuple using List: \n",
+      "(1, 2, 4, 5, 6)\n",
+      "Tuple with the use of function: \n",
+      "('h', 'e', 'l', 'l', 'o')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creating an empty Tuple \n",
+    "Tuple1 = () \n",
+    "print(\"Initial empty Tuple: \") \n",
+    "print (Tuple1) \n",
+    "\n",
+    "#Creatting a Tuple \n",
+    "#with the use of string \n",
+    "Tuple1 = ('data', 'science') \n",
+    "print(\"Tuple with the use of String: \") \n",
+    "print(Tuple1) \n",
+    "\n",
+    "# Creating a Tuple with \n",
+    "# the use of list \n",
+    "list1 = [1, 2, 4, 5, 6] \n",
+    "print(\"Tuple using List: \") \n",
+    "print(tuple(list1)) \n",
+    "\n",
+    "#Creating a Tuple \n",
+    "#with the use of built-in function \n",
+    "Tuple1 = tuple('hello') \n",
+    "print(\"Tuple with the use of function: \") \n",
+    "print(Tuple1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuple with Mixed Datatypes: \n",
+      "(5, 'Welcome', 7, 'python')\n",
+      "Tuple with nested tuples: \n",
+      "((0, 1, 2, 3), ('python', 'geek'))\n",
+      "Tuple with repetition: \n",
+      "GeeksGeeksGeeks\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Creating a Tuple \n",
+    "#with Mixed Datatype \n",
+    "Tuple1 = (5, 'Welcome', 7, 'python') \n",
+    "print(\"Tuple with Mixed Datatypes: \") \n",
+    "print(Tuple1) \n",
+    "\n",
+    "#Creating a Tuple \n",
+    "#with nested tuples \n",
+    "Tuple1 = (0, 1, 2, 3) \n",
+    "Tuple2 = ('python', 'geek') \n",
+    "Tuple3 = (Tuple1, Tuple2) \n",
+    "print(\"Tuple with nested tuples: \") \n",
+    "print(Tuple3) \n",
+    "\n",
+    "#Creating a Tuple \n",
+    "#with repetition \n",
+    "Tuple1 = ('Geeks') * 3\n",
+    "print(\"Tuple with repetition: \") \n",
+    "print(Tuple1) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Tuples are immutable, and usually, they contain a sequence of heterogeneous elements that are accessed via unpacking or indexing (or even by attribute in the case of named tuples). Lists are mutable, and their elements are usually homogeneous and are accessed by iterating over the list`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First element of Tuple: \n",
+      "e s\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-9dcb651505e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# we can not change values inside tuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mTuple1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'r'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTuple1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "#Accessing Tuple \n",
+    "#with Indexing \n",
+    "Tuple1 = tuple(\"Geeks\") \n",
+    "print(\"First element of Tuple: \") \n",
+    "print(Tuple1[1],Tuple1[-1]) \n",
+    "\n",
+    "# we can not change values inside tuple\n",
+    "Tuple1[0]='r'\n",
+    "print(Tuple1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Slicing of a Tuple is done to fetch a specific range or slice of sub-elements from a Tuple. Slicing can also be done to lists and arrays. Indexing in a list results to fetching a single element whereas Slicing allows to fetch a set of elements`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n# Slicing of a Tuple \\n\\n# Slicing of a Tuple \\n# with Numbers \\nTuple1 = tuple(\\'GEEKSFORGEEKS\\') \\n\\n# Removing First element \\nprint(\"Removal of First Element: \") \\nprint(Tuple1[1:]) \\n\\n# Reversing the Tuple \\nprint(\"Tuple after sequence of Element is reversed: \") \\nprint(Tuple1[::-1]) \\n\\n# Printing elements of a Range \\nprint(\"Printing elements between Range 4-9: \") \\nprint(Tuple1[4:9])\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# QUIZ what is the ouptut of the following program\n",
+    "'''\n",
+    "# Slicing of a Tuple \n",
+    "\n",
+    "# Slicing of a Tuple \n",
+    "# with Numbers \n",
+    "Tuple1 = tuple('GEEKSFORGEEKS') \n",
+    "\n",
+    "# Removing First element \n",
+    "print(\"Removal of First Element: \") \n",
+    "print(Tuple1[1:]) \n",
+    "\n",
+    "# Reversing the Tuple \n",
+    "print(\"Tuple after sequence of Element is reversed: \") \n",
+    "print(Tuple1[::-1]) \n",
+    "\n",
+    "# Printing elements of a Range \n",
+    "print(\"Printing elements between Range 4-9: \") \n",
+    "print(Tuple1[4:9])\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`also unlike lists where we can delete elements , we can not delete any elements from the tuble`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object doesn't support item deletion",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-ccefdba17d41>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mTuple1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mTuple1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTuple1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object doesn't support item deletion"
+     ]
+    }
+   ],
+   "source": [
+    "# Deleting a Tuple \n",
+    "\n",
+    "Tuple1 = (0, 1, 2, 3, 4) \n",
+    "del Tuple1[0]\n",
+    "print(Tuple1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python Dictionary\n",
+    "\n",
+    "`dictionary in python in key,value pair`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary with the use of Integer Keys: \n",
+      "{1: 'Geeks', 2: 'For', 3: 'Geeks'}\n",
+      "Dictionary with the use of Mixed Keys: \n",
+      "{'Name': 'Geeks', 1: [1, 2, 3, 4]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a Dictionary \n",
+    "# with Integer Keys \n",
+    "Dict = {1: 'python', 2: 'data', 3: 'science'} \n",
+    "print(\"Dictionary with the use of Integer Keys: \") \n",
+    "print(Dict) \n",
+    "\n",
+    "# Creating a Dictionary \n",
+    "# with Mixed keys \n",
+    "Dict = {'Name': 'Geeks', 1: [1, 2, 3, 4]} \n",
+    "print(\"Dictionary with the use of Mixed Keys: \") \n",
+    "print(Dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
