--- a/2_python_programming_language/1_python Input & Output.ipynb
+++ b/2_python_programming_language/1_python Input & Output.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name: mossad\n",
-      "hello :) mossad type of input <class 'str'>\n",
-      "Enter your age: 25\n",
-      "your age is 25 type of input <class 'str'>\n"
+      "Enter your name: mohamed\n",
+      "hello :) mohamed type of input <class 'str'>\n",
+      "Enter your age: jfksjd\n",
+      "your age is jfksjd type of input <class 'str'>\n"
      ]
     }
    ],
@@ -32,6 +32,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "1100\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=100\n",
+    "print(type(x))\n",
+    "print(x+1000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -51,11 +71,11 @@
       "1 2 3\n",
       "you entered [1, 2, 3]\n",
       "enter many numbers as you can , seprated by ,\n",
-      "1,2,3\n",
-      "you entered [1, 2, 3]\n",
+      "1,2,300\n",
+      "you entered [1, 2, 300]\n",
       "enter many numbers as you can , seprated by *\n",
-      "1*2*3\n",
-      "you entered [1, 2, 3]\n"
+      "100*0*9\n",
+      "you entered [100, 0, 9]\n"
      ]
     }
    ],
@@ -69,6 +89,65 @@
     "print(\"enter many numbers as you can , seprated by *\")\n",
     "input_stream=[int(x) for x in input().split('*')] # list comprehension\n",
     "print(\"you entered {}\".format([number for number in input_stream]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=input().split()\n",
+    "y=[int(i) for i in x]\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 7\n",
+      "['1', '3', '7']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input().split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '50%'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-bfc406d0da28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'50%'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '50%'"
+     ]
+    }
+   ],
+   "source": [
+    "int('50%')"
    ]
   },
   {
@@ -117,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
