--- a/2_python_programming_language/4_Loops and Control Flow.ipynb
+++ b/2_python_programming_language/4_Loops and Control Flow.ipynb
@@ -4,6 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### conditions\n",
+    "\n",
+    "![img](../images/conditionn.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is same as y\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example condition in python\n",
+    "x,y =8,8\n",
+    "\n",
+    "if(x < y):\n",
+    "    st= \"x is less than y\"\n",
+    "\n",
+    "elif (x == y):\n",
+    "    st= \"x is same as y\"\n",
+    "\n",
+    "else:\n",
+    "    st=\"x is greater than y\"\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### loops\n",
+    "\n",
+    "![img](../images/forloop.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## loops in python"
    ]
   },
@@ -310,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
