:fire: added ses2 assign

--- a/2_python_programming_language/4_Loops and Control Flow.ipynb
+++ b/2_python_programming_language/4_Loops and Control Flow.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "# Python program to illustrate \n",
     "# nested for loops in Python \n",
-    "for i in range(1, 10): \n",
+    "for i in range(1, 10): # range (firstnum >> start, second num >> end)\n",
     "    for j in range(i): \n",
     "        print('#',end='')\n",
     "    print('\\n')"
@@ -226,6 +226,7 @@
     "for letter in 'python programming language': \n",
     "# break the loop as soon it sees 'e' \n",
     "    # or 's' \n",
+    "    print(letter)\n",
     "    if letter == 'h' or letter == 'z': \n",
     "        break\n",
     "print ('Current Letter :', letter)"
