--- a/2_python_programming_language/5_python_data structures.ipynb
+++ b/2_python_programming_language/5_python_data structures.ipynb
@@ -709,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adding elements from a Dictionary"
+    "#### Adding elements to a Dictionary"
    ]
   },
   {
