--- a/2_python_programming_language/6_string_manipulation.ipynb
+++ b/2_python_programming_language/6_string_manipulation.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -194,13 +194,15 @@
        "'EXAMPLE STRING'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'example string'.upper() # upper used to uppercase all chars in string"
+    "str1='example string'\n",
+    "str1u=str1.upper()\n",
+    "str1u # upper used to uppercase all chars in string"
    ]
   },
   {
